@@ -38,7 +38,7 @@ typedef struct {
 
 	void (*set_frame)	(BonoboZoomable *zoomable);
 	void (*set_zoom_level)	(BonoboZoomable *zoomable,
-				 float zoom_level);
+				 CORBA_float     zoom_level);
 
 	void (*zoom_in)		(BonoboZoomable *zoomable);
 	void (*zoom_out)	(BonoboZoomable *zoomable);
@@ -65,18 +65,17 @@ void		 bonobo_zoomable_set_parameters_full		(BonoboZoomable	*zoomable,
 								 gboolean	 has_min_zoom_level,
 								 gboolean	 has_max_zoom_level,
 								 gboolean	 is_continuous,
-								 float          *preferred_zoom_levels,
+								 CORBA_float    *preferred_zoom_levels,
 								 const gchar   **preferred_zoom_level_names,
 								 gint		 num_preferred_zoom_levels);
 void             bonobo_zoomable_add_preferred_zoom_level       (BonoboZoomable *zoomable,
-                                                                 float zoom_level,
-                                                                 const gchar *zoom_level_name);
+                                                                 CORBA_float     zoom_level,
+                                                                 const gchar    *zoom_level_name);
 
-void		 bonobo_zoomable_report_zoom_level_changed	(BonoboZoomable	*zoomable,
-								 float		 new_zoom_level,
+void		 bonobo_zoomable_report_zoom_level_changed	(BonoboZoomable	   *zoomable,
+								 float		    new_zoom_level,
 								 CORBA_Environment *opt_ev);
-
-void		 bonobo_zoomable_report_zoom_parameters_changed	(BonoboZoomable	*zoomable,
+void		 bonobo_zoomable_report_zoom_parameters_changed	(BonoboZoomable    *zoomable,
 								 CORBA_Environment *opt_ev);
 
 
